--- a/src/app/users/add-edit.component.html
+++ b/src/app/users/add-edit.component.html
@@ -1,16 +1,28 @@
 ﻿<h1>{{title}}</h1>
-<form *ngIf="!loading" [formGroup]="form" (ngSubmit)="onSubmit()">
+<form *ngIf="loading" [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="row">
         <div class="mb-3 col">
             <label class="form-label">First Name</label>
-            <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+            <input
+                type="text"
+                formControlName="user.firstName"
+                class="form-control"
+                [ngClass]="{'is-invalid': submitted && f.firstName.errors }"
+                value="{{user.firstName}}"
+            />
             <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
                 <div *ngIf="f.firstName.errors.required">First Name is required</div>
             </div>
         </div>
         <div class="mb-3 col">
             <label class="form-label">Last Name</label>
-            <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+            <input
+                type="text"
+                formControlName="user.lastName"
+                class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }"
+                value="{{user.lastName}}"
+            />
             <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
                 <div *ngIf="f.lastName.errors.required">Last Name is required</div>
             </div>
@@ -19,7 +31,13 @@
     <div class="row">
         <div class="mb-3 col">
             <label class="form-label">Username</label>
-            <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+            <input
+                type="text"
+                formControlName="user.username"
+                class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.username.errors }"
+                value="{{user.username}}"
+            />
             <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                 <div *ngIf="f.username.errors.required">Username is required</div>
             </div>
@@ -44,6 +62,6 @@
         <a routerLink="/users" class="btn btn-link">Cancel</a>
     </div>
 </form>
-<div *ngIf="loading" class="text-center m-5">
+<div *ngIf="!loading" class="text-center m-5">
     <span class="spinner-border spinner-border-lg align-center"></span>
 </div>
