--- a/src/app/_components/patient-list/add-edit.component.html
+++ b/src/app/_components/patient-list/add-edit.component.html
@@ -18,23 +18,6 @@
     </div>
     <div class="row">
         <div class="mb-3 col">
-            <label class="form-label">Username</label>
-            <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                <div *ngIf="f.username.errors.required">Username is required</div>
-            </div>
-        </div>
-        <div class="mb-3 col">
-            <label class="form-label">Password <em *ngIf="id">(Leave blank to keep the same password)</em></label>
-            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                <div *ngIf="f.password.errors.required">Password is required</div>
-                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="mb-3 col">
             <label class="form-label">Address</label>
             <input type="text" formControlName="adresse" class="form-control" />
         </div>
@@ -54,7 +37,7 @@
             <span *ngIf="submitting" class="spinner-border spinner-border-sm me-1"></span>
             Save
         </button>
-        <a routerLink="/users" class="btn btn-link">Cancel</a>
+        <a routerLink="/patients" class="btn btn-link">Cancel</a>
     </div>
 </form>
 <div *ngIf="loading" class="text-center m-5">
