--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="p-4">
     <div class="container">
-        <h1>Hi {{user?.firstName}}, How's your day?</h1>
+        <h1>Hi {{user?.prenom}}, How's your day?</h1>
         <p>You're logged in</p>
         <p><a routerLink="/users">Manage Users</a></p>
     </div>
