--- a/src/app/users/add-edit.component.html
+++ b/src/app/users/add-edit.component.html
@@ -1,5 +1,5 @@
-﻿<h1>{{title}}</h1>
-<form *ngIf="loading" [formGroup]="form" (ngSubmit)="onSubmit()">
+﻿﻿<h1>{{title}}</h1>
+<form *ngIf="!loading" [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="row">
         <div class="mb-3 col">
             <label class="form-label">First Name</label>
@@ -19,40 +19,21 @@
     <div class="row">
         <div class="mb-3 col">
             <label class="form-label">Username</label>
-            <input
-                type="text"
-                formControlName="user.username"
-                class="form-control"
-                [ngClass]="{ 'is-invalid': submitted && f.username.errors }"
-                value="{{user.username}}"
-            />
+            <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
             <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                 <div *ngIf="f.username.errors.required">Username is required</div>
             </div>
         </div>
         <div class="mb-3 col">
-            <label class="form-label">Password <em *ngIf="id">(Leave blank to keep the same password)</em></label>
+            <label class="form-label">
+                Password
+                <em *ngIf="id">(Leave blank to keep the same password)</em>
+            </label>
             <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
             <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                 <div *ngIf="f.password.errors.required">Password is required</div>
                 <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="mb-3 col">
-            <label class="form-label">Address</label>
-            <input type="text" formControlName="adresse" class="form-control" />
-        </div>
-        <div class="mb-3 col">
-            <label class="form-label">Email</label>
-            <input type="email" formControlName="email" class="form-control" />
-        </div>
-    </div>
-    <div class="row">
-        <div class="mb-3 col">
-            <label class="form-label">Telephone</label>
-            <input type="text" formControlName="telephone" class="form-control" />
         </div>
     </div>
     <div class="mb-3">
@@ -63,6 +44,6 @@
         <a routerLink="/users" class="btn btn-link">Cancel</a>
     </div>
 </form>
-<div *ngIf="!loading" class="text-center m-5">
+<div *ngIf="loading" class="text-center m-5">
     <span class="spinner-border spinner-border-lg align-center"></span>
 </div>
